# herring

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: logos_benchmark.rs
herring-automata/: Cargo.toml
herring-automata/src/: debug.rs  dfa.rs  lib.rs  nfa.rs
herring-derive/: Cargo.toml
herring-derive/src/: debug.rs  generate.rs  lib.rs  parse.rs
src/: assert.rs  lib.rs
tests/: ignore.rs  initial.rs  json.rs  logos_advanced.rs  logos_binary.rs  logos_bugs.rs  logos_css.rs  logos_custom_error.rs  logos_edgecase.rs  logos_ignore_case.rs  logos_properties.rs  logos_simple.rs  logos_unicode_dot.rs
