[package]
name = "herring-derive"
version = "0.1.1"
edition = "2021"
description = "Macro implementation of #[derive(Herring)]"
repository = "https://github.com/0x2a-42/herring"
license = "MIT OR Apache-2.0"
keywords = ["herring", "derive"]

[lib]
proc-macro = true

[dependencies]
herring-automata = { version = "0.1", path = "../herring-automata" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
